# Market_Analyzer

./: .gitignore  DATABASE_MIGRATION.md  Dockerfile  MOBILE_PLAN.md  Procfile  README.md  add_job_status_migration.py  ai_data_cleaner.py  ai_location_skill_recommendation.py  ai_skill_recommendation.py  api_handler.py  debug.py  debug_zero_salary.py  design_document.md  implementation_plan.md  migrate_to_sqlite.py  muse_jobs.json  nixpacks.toml  nlp.py  pyproject.toml  recommendation_api.py  requirements.txt  run.sh  run_collection.py  schema.sql  skills.json  test_queries.py  verify_database.py
data/: schema.sql
frontend/: design-guidelines.md  index.html  package-lock.json  package.json  start_frontend.sh
frontend/src/: App.css  App.jsx  api.js  index.css
migrations/: 001_initial_schema.sql  002_add_users_table.sql  003_add_resumes_table.sql  004_add_tailoring_history.sql
scripts/: add_job_status_migration.py  close_jobs.py  collect_google_all_states.py  cron_collect.py  data_cleaner.py  google_jobs_collector.py  migrate_drop_muse_columns.py  migrate_sqlite_to_postgres.py  migrate_to_postgres.load  migrate_to_sqlite.py  run_collection.py  run_migrations.py  temp_collect.py  visualize_db.py
src/market_analyzer/: ai_data_cleaner.py  ai_location_skill_recommendation.py  ai_skill_recommendation.py  api_handler.py  auth.py  (+19 more)
tests/: conftest.py  test_cleaner.py  test_collector.py  test_location_recommender.py  test_migrator.py  test_queries.py  test_query_performance.py  test_resume_endpoints.py  test_resume_parser.py  test_schema.py  test_server.py  test_skill_recommender.py  test_skill_suggester.py  test_tailoring.py  verify_database.py
(+29 files in other folders)
